# AlphaTracer

./: .gitignore  Dockerfile  LICENSE  README.md  alpha_search_v0.2.py  alpha_trace_v0.4.py  pyproject.toml
alphatracer/: AT_classA.py  AT_classA_kmer.py  AT_classB.py  AT_classC_and_D.py  __init__.py  loop_closer.py  pae_to_domains.py  run_alphatracer.py  setup_databases.py
alphatracer/sketch_rs/: Cargo.toml
alphatracer/sketch_rs/src/: build_index.rs  cluster.rs  index_seqs.rs  main.rs  parse_pae.rs  search.rs
